update api remove arrays that did not make sense
