# back/modules/generated/app/be/frol/game/api/LostInTranslationApi.scala
@@ -3,21 +3,21 @@ package be.frol.game.api
 import be.frol.game.model.LostInTranslationGame
 import play.api.libs.Files.TemporaryFile
 
-@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-08T16:44:35.029Z[Etc/UTC]")
+@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-08T18:07:22.741Z[Etc/UTC]")
 trait LostInTranslationApi {
   /**
     * add drawing round in lostInTranslation game
     */
-  def addDrawingRound(uuid: String, file: TemporaryFile): List[LostInTranslationGame]
+  def addDrawingRound(uuid: String, file: TemporaryFile): LostInTranslationGame
 
   /**
     * add text round in LostInTranslation game
     * @param text the text
     */
-  def addTextRound(uuid: String, text: String): List[LostInTranslationGame]
+  def addTextRound(uuid: String, text: String): LostInTranslationGame
 
   /**
     * Get an LostInTranslation game
     */
-  def getGame(uuid: String): List[LostInTranslationGame]
+  def getGame(uuid: String): LostInTranslationGame
 }
