# back/modules/generated/app/be/frol/game/api/LostInTranslationApiImpl.scala
@@ -6,32 +6,32 @@ import play.api.libs.Files.TemporaryFile
 /**
   * Provides a default implementation for [[LostInTranslationApi]].
   */
-@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-08T16:44:35.029Z[Etc/UTC]")
+@javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"), date = "2021-02-08T18:07:22.741Z[Etc/UTC]")
 class LostInTranslationApiImpl extends LostInTranslationApi {
   /**
     * @inheritdoc
     */
-  override def addDrawingRound(uuid: String, file: TemporaryFile): List[LostInTranslationGame] = {
+  override def addDrawingRound(uuid: String, file: TemporaryFile): LostInTranslationGame = {
     // TODO: Implement better logic
 
-    List.empty[LostInTranslationGame]
+    LostInTranslationGame(None, None)
   }
 
   /**
     * @inheritdoc
     */
-  override def addTextRound(uuid: String, text: String): List[LostInTranslationGame] = {
+  override def addTextRound(uuid: String, text: String): LostInTranslationGame = {
     // TODO: Implement better logic
 
-    List.empty[LostInTranslationGame]
+    LostInTranslationGame(None, None)
   }
 
   /**
     * @inheritdoc
     */
-  override def getGame(uuid: String): List[LostInTranslationGame] = {
+  override def getGame(uuid: String): LostInTranslationGame = {
     // TODO: Implement better logic
 
-    List.empty[LostInTranslationGame]
+    LostInTranslationGame(None, None)
   }
 }
